Полная переработка платформы по ТЗ: Java 17, Spring Boot 3, REST API + React SPA
Backend:
- Миграция Java 11 → 17, Spring Boot 2.7 → 3.4, javax → jakarta, jjwt 0.9 → 0.12
- Полное удаление Thymeleaf: headless REST API /api/v1/** (auth, user, dictionary,
  learn, articles, billing, sync, dashboard, admin, config)
- Stateless JWT + refresh-токены с ротацией (SHA-256 хэши в БД)
- OAuth2-эндпоинт с верификаторами Google (tokeninfo), Apple (JWKS), VK
- Личный словарь: системные и пользовательские слова, источники, лимит Free/Premium
- Интервальное повторение (SRS): x0.75/x1.3, порог выученности 0.1, активные порции
- Разбор текстов: токенизация (BreakIterator), перевод по клику с кэшем
  (MyMemory/Yandex провайдеры, TTL 30 дней), лимит 10000 символов
- Монетизация: Premium 1/6/12 мес, мок-шлюз оплаты, Paywall-коды ошибок,
  ограничение C1/C2, управление рекламой
- Админка: пользователи, system_settings, импорт словарей из JSON с валидацией,
  CRUD статей с фильтром нецензурной лексики
- Rate limiting (bucket4j), Actuator, GDPR-удаление аккаунта
- Liquibase 6.0: аддитивная миграция живых данных (word_progress → user_dictionary,
  texts → articles, теги → word_tags, level_order, premium-поля)

Frontend (React 18 + TypeScript + Vite):
- SPA: Dashboard со статистикой и streak, словарь со счётчиком лимита,
  flashcards-тренировка, режим 25-го кадра (RSVP), библиотека текстов,
  разбор своего текста с переводом по клику, профиль, Paywall, админ-панель
- Axios с авто-refresh токенов, тёмная glassmorphism-тема, i18n ru/en

Мобильные клиенты не реализованы; API (sync, verify-purchase) заложен под них.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>